--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -397,5 +397,12 @@
     "onboardingMind6": "Da kreirate novu belešku, dodirnite 'Piši'",
     "viewPhotos": "Pogledaj fotografije",
     "noPhotosForDay": "Nema fotografija za ovaj dan",
-    "photosFromDay": "Fotografije od {date}"
+    "photosFromDay": "Fotografije od {date}",
+    "sources": "Izvori",
+    "sourcesMinds": "Misli",
+    "sourcesMindsSubtitle": "Vaše misli i trenuci",
+    "sourcesPhotoVideo": "Fotografije i video",
+    "sourcesPhotoVideoSubtitle": "Fotografije i video snimci uređaja za ovaj dan",
+    "otherSources": "Drugi izvori",
+    "licenses": "Licence"
 }
