--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -131,5 +131,12 @@
     "yourNickname": "您的昵称",
     "viewPhotos": "查看照片",
     "noPhotosForDay": "未找到当天的照片",
-    "photosFromDay": "{date}的照片"
+    "photosFromDay": "{date}的照片",
+    "sources": "来源",
+    "sourcesMinds": "想法",
+    "sourcesMindsSubtitle": "你的想法和时刻",
+    "sourcesPhotoVideo": "照片和视频",
+    "sourcesPhotoVideoSubtitle": "本日设备的照片和视频",
+    "otherSources": "其他来源",
+    "licenses": "许可证"
 }
