media change title * swipe gestures * fix insets * share * open settings if denied

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -131,7 +131,7 @@
     "yourNickname": "Ihr Spitzname",
     "viewPhotos": "Fotos ansehen",
     "noPhotosForDay": "Keine Fotos für diesen Tag gefunden",
-    "photosFromDay": "Fotos vom {date}",
+    "dateGallerySubtitle": "Mediendateien für diesen Tag",
     "sources": "Quellen",
     "sourcesMinds": "Gedanken",
     "sourcesMindsSubtitle": "Deine Gedanken und Momente",
