--- a/lib/l10n/app_sr_Latn.arb
+++ b/lib/l10n/app_sr_Latn.arb
@@ -397,7 +397,7 @@
     "onboardingMind6": "Da kreirate novu belešku, dodirnite 'Piši'",
     "viewPhotos": "Pogledaj fotografije",
     "noPhotosForDay": "Nema fotografija za ovaj dan",
-    "photosFromDay": "Fotografije od {date}",
+    "dateGallerySubtitle": "Medijske datoteke za ovaj dan",
     "sources": "Izvori",
     "sourcesMinds": "Misli",
     "sourcesMindsSubtitle": "Vaše misli i trenuci",
