--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -131,7 +131,7 @@
     "yourNickname": "您的昵称",
     "viewPhotos": "查看照片",
     "noPhotosForDay": "未找到当天的照片",
-    "photosFromDay": "{date}的照片",
+    "dateGallerySubtitle": "本日的媒体文件",
     "sources": "来源",
     "sourcesMinds": "想法",
     "sourcesMindsSubtitle": "你的想法和时刻",
