various fixes * improvements * empty state

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -132,6 +132,7 @@
     "viewPhotos": "Fotos ansehen",
     "noPhotosForDay": "Keine Fotos für diesen Tag gefunden",
     "dateGallerySubtitle": "Mediendateien für diesen Tag",
+    "dayMediaFilesCount": "{count} Mediendateien für diesen Tag",
     "sources": "Quellen",
     "sourcesMinds": "Gedanken",
     "sourcesMindsSubtitle": "Deine Gedanken und Momente",
