--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -132,6 +132,7 @@
     "viewPhotos": "Посмотреть фото",
     "noPhotosForDay": "Нет фотографий за этот день",
     "dateGallerySubtitle": "Медиафайлы за этот день",
+    "dayMediaFilesCount": "{count} медиафайлов за этот день",
     "sources": "Источники",
     "sourcesMinds": "Мысли",
     "sourcesMindsSubtitle": "Ваши мысли и моменты",
