--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -132,6 +132,7 @@
     "viewPhotos": "Погледај фотографије",
     "noPhotosForDay": "Нема фотографија за овај дан",
     "dateGallerySubtitle": "Медиjске датотеке за овај дан",
+    "dayMediaFilesCount": "{count} медијских датотека за овај дан",
     "sources": "Извори",
     "sourcesMinds": "Мисли",
     "sourcesMindsSubtitle": "Ваше мисли и тренуци",
