--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -398,6 +398,7 @@
     "viewPhotos": "Фотосуреттерді қарау",
     "noPhotosForDay": "Бұл күнге фотосуреттер табылмады",
     "dateGallerySubtitle": "Осы күнгі медиафайлдар",
+    "dayMediaFilesCount": "{count} медиафайл осы күнге",
     "sources": "Дереккөздер",
     "sourcesMinds": "Ойлар",
     "sourcesMindsSubtitle": "Сіздің ойларыңыз бен сәттеріңіз",
